--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    background-image: linear-gradient(black, darkred);
+    background-image: linear-gradient(black, grey);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -15,7 +15,8 @@ body{
 }
 
 header{
-	background-image: linear-gradient(black, purple);
+    margin: 15px;
+    border: 3px solid white;
 	display: flex;
 	justify-content: center;
 }
@@ -34,12 +35,12 @@ header{
 nav{
 	border: ridge;
 	border-color: darkred;
-	border-radius: 5px;
+	border-radius: 50px;
 	background-color: darkred;
     background-image: linear-gradient(to right, rgba(0,0,1,1.00), rgba(0,0,1,0.00));
-	width: auto;
-    margin-left: auto;
-    margin-right: auto;
+	width: 90%;
+    margin: 25px auto;
+    padding: 0px 25px;
 }
 
 nav ul{
@@ -62,7 +63,7 @@ nav ul li a{
 
 nav ul li a:hover{
 	opacity: 1;
-	border-radius: 25px;
+	border-radius: 15px;
 	background-color: red;
 	transition-duration: 0.3s;
 	background-image: linear-gradient(rgba(0,0,1,1.00), rgba(0,0,1,0.00))
@@ -77,16 +78,17 @@ nav ul li ul{
 }
 
 nav ul li:hover ul{
-    width: 100px;
+    width: 200px;
 	display: block;
 	border: ridge;
-	border-color: white;
+	border-color: blue;
 	border-radius: 0px 0px 25px 25px;
 	background-image: linear-gradient(rgba(0,0,1,0), rgba(130,0,1,1.00))
 }
 
 nav ul li ul li{
-	widows: 180px;
+    border: 3px solid green;
+	width: 100%;
 	border-radius: 8px;
 }
 
@@ -96,15 +98,8 @@ nav ul li ul li a:hover{
 
 main{
     border: 3px solid white;
-    background-image: linear-gradient(black, darkred);
-	margin-top: 90px;
-	margin-bottom: 15px;
-	margin-left: 15px;
-	margin-right: 15px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	padding-left: 10px;
-	padding-right: 10px;
+	margin: 15px;
+	padding: 15px;
 	color: white;
 	clear: both;
 	overflow: auto;
@@ -112,9 +107,9 @@ main{
 }
 
 #main_center {
-    background-image: linear-gradient(black, darkred);
+    background-image: linear-gradient(black, red);
     border-radius: 25px;
-    border: 3px ridge red;
+    border: 3px solid red;
     padding: 30px;
     width: auto;
     display: block;
@@ -196,7 +191,7 @@ footer a{
 	    padding: 8px 14px;
     }
     .text{
-        width: 100%;
+        width: auto;
     }
     #main_center{
         margin: 0px 25%;
