--- a/css/index.css
+++ b/css/index.css
@@ -21,17 +21,6 @@ header{
 	justify-content: center;
 }
 
-.titletext {
-	float: left;
-	text-align: center;
-	text-transform: uppercase;
-	background: linear-gradient(to right, #FF0000 30%, #610000 100%);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-	font-size: 200px;
-	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
-}
-
 nav{
 	border: ridge;
 	border-color: darkred;
@@ -119,21 +108,29 @@ main{
     display: block;
 }
 
-.slideshow-container {
+.charSlideCont {
     display: block;
-    border: 3px solid white;
+    border: 3px solid red;
+    border-radius: 50px 50px 5px 5px;
     max-width: 500px;
     position: relative;
     margin: auto;
 }
 
 .text {
-    background-color: black;
+    background-image: linear-gradient(black, red);
     color: white;
     font-size: 20px;
     margin: 0px;
     position: relative;
     text-align: center;
+}
+
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 2.5s;
+    animation-name: fade;
+    animation-duration: 2.5s;
 }
 
 .dot {
@@ -144,27 +141,6 @@ main{
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
-}
-
-.active {
-    background-color: #717171;
-}
-
-.fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 2.5s;
-    animation-name: fade;
-    animation-duration: 2.5s;
-}
-
-@-webkit-keyframes fade {
-    from {opacity: .4} 
-    to {opacity: 1}
-}
-
-@keyframes fade {
-    from {opacity: .4} 
-    to {opacity: 1}
 }
 
 #footer{
@@ -178,6 +154,26 @@ main{
 footer a{
 	text-decoration: none;
 	color: darkred;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
 }
 
 @media only screen and (min-width: 1001px) {
