--- a/css/index.css
+++ b/css/index.css
@@ -7,217 +7,160 @@
 }
 
 body{
-    background-image: linear-gradient(black, grey);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    background-image: linear-gradient(black, darkred);
     background-attachment: fixed;
 }
 
-header{
-    margin: 15px;
-    border: 3px solid white;
-	display: flex;
-	justify-content: center;
-}
-
-nav{
-	border: ridge;
-	border-color: darkred;
-	border-radius: 50px;
-	background-color: darkred;
-    background-image: linear-gradient(to right, rgba(0,0,1,1.00), rgba(0,0,1,0.00));
-	width: 90%;
-    margin: 25px auto;
-    padding: 0px 25px;
-}
-
-nav ul{
-	float: left;
-}
-
-nav ul li{
-	display: block;
-	float: left;
-	list-style: none;
-	position: relative;
-}
-
-nav ul li a{
-	display: block;
+.parent-nav{
+	border: none;
 	color: white;
-    font-size: 14px;
+	background-color: black;
+	padding: 5px 5px 0px 5px;
+	text-align: left;
+	text-decoration: none;
+	font-size: 25px;
+	cursor: pointer;
+}
+
+.child-nav{
+	border: none;
+	display: block;
+	text-decoration: none;
+	width: auto;
+	margin: 15px 0px 0px;
+	padding: 0px 0px 0px 5px;
+	transition: 0.5s;
+	color: white;
+	background-color: black;
+	font-size: 15px;
+	cursor: pointer;
+}
+
+.item-nav{
+	border: none;
+	display: block;
+	text-decoration: none;
+	width: auto;
+	margin: 15px 0px 0px;
+	padding: 0px 0px 0px 5px;
+	transition: 0.5s;
+	color: white;
+	background-color: black;
+	font-size: 15px;
+	cursor: pointer;
+}
+
+.child-nav:hover{
+	color: grey;
+}
+
+.item-nav:hover{
+	color: grey;
+}
+
+.mobile-top-nav{
+	border-radius: 0px 0px 25px 25px;
+	border-bottom: 3px solid darkred;
+	padding: 0px 0px 10px;
+	margin: 0px 0px 0px;
+	overflow-y: auto;
+	height: auto;
+	max-height: 100%;
+	background-color: black;
+}
+
+.mobile-top-nav .nav-hold{
+	border-right: 3px solid darkred;
+	display: none;
+	position: absolute;
+	border-radius: 0px 0px 25px 25px;
+	width: 50%;
+	margin: 10px 0px 0px;
+	padding: 0px 0px 20px 10px;
+	transition: 0.5s;
+	background-color: black;
+	transition: 0.5s;
+}
+
+.mobile-top-nav .item-hold{
+	display: none;
+	width: auto;
+	padding: 0px 0px 0px 10px;
+	background-color: black;
+	transition: 0.5s;
+}
+
+.mobile-top-nav .item-hold a{
+	color: white;
 	text-decoration: none;
 }
 
-nav ul li a:hover{
-	opacity: 1;
-	border-radius: 15px;
-	background-color: red;
-	transition-duration: 0.3s;
-	background-image: linear-gradient(rgba(0,0,1,1.00), rgba(0,0,1,0.00))
-}
-
-nav ul li ul{
-	display: none;
-	position: absolute;
-	background-color: black;
-	padding: 5px;
-	border-radius: 0px 0px 4px 4px;
-}
-
-nav ul li:hover ul{
-    width: 200px;
+.mobile-logo{
 	display: block;
-	border: ridge;
-	border-color: blue;
-	border-radius: 0px 0px 25px 25px;
-	background-image: linear-gradient(rgba(0,0,1,0), rgba(130,0,1,1.00))
+	width: auto;
+	text-align: center;
+	margin-top: 50px;
 }
 
-nav ul li ul li{
-    border: 3px solid green;
-	width: 100%;
-	border-radius: 8px;
+.desktop-logo{
+	display: none;
+	width: auto;
+	text-align: center;
+	margin-top: 100px;
 }
 
-nav ul li ul li a:hover{
-	background-color: red;
-}
-
-main{
-    border: 3px solid white;
-	margin: 15px;
-	padding: 15px;
+.notice{
 	color: white;
-	clear: both;
-	overflow: auto;
-	max-width: 1920px;
+	padding: 0px;
+	margin: 25px 50px 25px 20px;
 }
 
-#main_center {
-    background-image: linear-gradient(black, red);
-    border-radius: 25px;
-    border: 3px solid red;
-    padding: 30px;
-    width: auto;
-    display: block;
-}
-
-.mySlides {
-    display: block;
-}
-
-.charSlideCont {
-    display: block;
-    border: 3px solid red;
-    border-radius: 50px 50px 5px 5px;
-    max-width: 500px;
-    position: relative;
-    margin: auto;
-}
-
-.text {
-    background-image: linear-gradient(black, red);
-    color: white;
-    font-size: 20px;
-    margin: 0px;
-    position: relative;
-    text-align: center;
-}
-
-.fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 2.5s;
-    animation-name: fade;
-    animation-duration: 2.5s;
-}
-
-.dot {
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
+.ext-foot{
+	border-style: none;
+	border-radius: 15px 0px 0px 0px;
+	color: white;
+	background-color: black;
+	position: fixed;
+	padding: 10px 10px 30px;
+	right: 0px;
 }
 
 #footer{
+	position: fixed;
+	width: 100%;
+	height: 0px;
+	bottom: 0px;
 	background-color: black;
-	padding-top:10px;
-	padding-bottom: 10px;
 	text-align: center;
 	color: white;
 }
 
-footer a{
-	text-decoration: none;
-	color: darkred;
+@media only screen and (min-width: 1000px) {
+	
+	.child-nav{
+		display: inline-block;
+	}
+	
+	.mobile-top-nav{
+		margin: 50px 100px;
+		border-radius: 25px;
+		border-top: 3px solid darkred;
+	}
+	
+	.mobile-top-nav .nav-hold{
+		width: 500px;
+	}
+	
+	.mobile-logo{
+		display: none;
+	}
+	
+	.desktop-logo{
+		display: block;
+	}
+	
+	.notice{
+		margin: 25px 100px 25px;
+	}
 }
 
-@-webkit-keyframes fade {
-    from {
-        opacity: .4
-    }
-
-    to {
-        opacity: 1
-    }
-}
-
-@keyframes fade {
-    from {
-        opacity: .4
-    }
-
-    to {
-        opacity: 1
-    }
-}
-
-@media only screen and (min-width: 1001px) {
-    nav{
-        height: 60px;
-    }
-    nav ul li a{
-        padding: 18px;
-    }
-    nav ul li ul li a{
-	    padding: 8px 14px;
-    }
-    .text{
-        width: auto;
-    }
-    #main_center{
-        margin: 0px 25%;
-    }
-}
-
-@media only screen and (max-width: 1000px) {
-    h1{
-        font-size: 20px;
-    }
-    nav{
-        height: 48px;
-    }
-    nav ul li a{
-        padding: 12px;
-    }
-    nav ul li ul li a{
-	    padding: 6px 14px;
-    }
-    .text{
-        font-size: 11px;
-        width: 100%;
-    }
-    .para{
-        font-size: 11px;
-    }
-    #main_center{
-        margin: 0px;
-    }
-    #footer{
-        font-size: 10px;
-    }
-}
