--- a/css/arknightsMainStyle.css
+++ b/css/arknightsMainStyle.css
@@ -12,6 +12,7 @@ a{
 	color: white;
 	font-size: 25px;
 	text-align: center;
+	height: 30px;
 	background-color: black;
 	padding: 5px;
 	margin-bottom: 15px;
@@ -21,6 +22,7 @@ a{
 }
 
 .sub-nav:hover{
+	font-size: 23px;
 	margin: 0px 10px 15px;
 	background-color: darkred;
 	background-image: linear-gradient(rgba(0,0,1,0.00),black);
