--- a/css/globalStyle.css
+++ b/css/globalStyle.css
@@ -33,10 +33,10 @@ body{
 nav{
 	position: fixed;
 	top: 0px;
-	left: 300px;
-	right: 300px;
+	left: 200px;
+	right: 200px;
 	height: 60px;
-	padding-left: 50px;
+	padding: 0px 50px;
 	background-color: black;
 	border-radius: 0px 0px 60px 60px;
 	border-bottom: 10px solid darkred;
@@ -115,10 +115,14 @@ legend{
 
 footer{
 	position: fixed;
-	width: 100%;
-	height: 0px;
+	display: none;
+	width: auto;
+	height: 100px;
 	bottom: 0px;
+	left: 300px;
+	right: 300px;
 	background-color: black;
+	border-radius: 100px 100px 0px 0px;
 	text-align: center;
 	color: white;
 }
