--- a/arknights/postPVs-playlist/css/arknightsPVsDetailsStyle.css
+++ b/arknights/postPVs-playlist/css/arknightsPVsDetailsStyle.css
@@ -5,9 +5,8 @@
 	margin: 0px;
 }
 
-html{
-	width: auto;
-	height: auto;
+body{
+	background-color: grey;
 }
 
 .content-item{
@@ -25,6 +24,10 @@ html{
 	background: grey;
 }
 
+.content-item:focus{
+	background: grey;
+}
+
 .content-detail{
 	display: inline-block;
 	font-size: 20px;
@@ -33,13 +36,28 @@ html{
 	border-radius: 25px;
 }
 
-span{
+.copyright{
 	position: relative;
 	color: white;
 	border-radius: 50%;
 	padding: 0px 10px;
 	margin-left: 5px;
 	background: darkred;
+}
+
+.story-spoil{
+	position: relative;
+	color: white;
+	border-radius: 50%;
+	padding: 0px 10px;
+	margin-left: 5px;
+	background: orange;
+}
+
+@media only screen and (max-width: 300px){
+	.content-item{
+		font-size: 20px;
+	}
 }
 
 /* width */
