--- a/css/globalStyle.css
+++ b/css/globalStyle.css
@@ -5,12 +5,12 @@
 	padding: 0px;
 }
 
-.void{
-	height: 100px;
+html{
+	min-width: 350px;
 }
 
-.alert-mobile{
-	display: none;
+.void{
+	height: 100px;
 }
 
 p{
@@ -77,8 +77,8 @@ p{
 #top-nav{
 	position: fixed;
 	top: 0px;
-	left: 200px;
-	right: 200px;
+	left: 0px;
+	right: 0px;
 	height: 60px;
 	padding: 0px 50px;
 	background-color: black;
