--- a/arknights/postPVs-playlist/css/arknightsPVsDetailsStyle.css
+++ b/arknights/postPVs-playlist/css/arknightsPVsDetailsStyle.css
@@ -35,7 +35,15 @@ body{
 	border: 2px solid black;
 	border-radius: 25px;
 }
-
+.content-duration{
+	color: white;
+	display: inline-block;
+	font-size: 20px;
+	padding: 0px 5px;
+	border: 2px solid black;
+	border-radius: 25px;
+	background: black;
+}
 .copyright{
 	position: relative;
 	color: white;
